--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 			</div>
 			<div class="chatbox-message-bottom">
 				<form action="#" class="chatbox-message-form">
-					<textarea rows="1" placeholder="Pergunte aqui..." class="chatbox-message-input"></textarea>
-					<button type="submit" class="chatbox-message-submit"><i class='bx bx-send' ></i></button>
+					<textarea   class="chatbox-message-input"></textarea>
+					<button type="submit" class="chatbox-message-submit"></button>
 				</form>
 			</div>
 		</div>
